--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -8,7 +8,7 @@ body {
     font-family: 'Roboto', 'Noto Sans KR', sans-serif;
 }
 
-.screen_out {
+.screenOut {
   overflow: hidden;
   position: absolute;
   width: 0;
@@ -25,7 +25,7 @@ body {
   display: none;
 }
 
-.img_g {
+.imgG {
   display: block;
   width: 100%;
 }
