--- a/src/pages/Recommend/Recommend.scss
+++ b/src/pages/Recommend/Recommend.scss
@@ -1,58 +1,57 @@
-.RecommendWrap {
-  position: relative;
-  display: grid;
-  place-items: center;
-  grid-template-columns: 1fr 1fr;
-  column-gap: 16px;
-  row-gap: 15px;
-  top: 332px;
-  padding: 0 20px;
+.Recommend {
+  box-sizing: border-box;
+  height: 100vh;
+  padding: 22px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-  .RecommendBox {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 158px;
-    height: 66px;
-    background-color: rgba(238, 125, 0, 0.09);
-    border-radius: 10px;
-    cursor: pointer;
+  .RecommendWrap {
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 16px;
+    row-gap: 15px;
+    top: 332px;
 
-    .RecommendText {
-      position: absolute;
-      left: 20px;
-      color: rgba(34, 34, 34, 0.3);
-      font-size: 20px;
-      font-weight: 700;
+    .RecommendBox {
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 66px;
+      background-color: rgba(238, 125, 0, 0.09);
+      border-radius: 10px;
+      padding: 0 20px;
+
+      button {
+        color: rgba(34, 34, 34, 0.3);
+        font-size: 20px;
+        font-weight: 700;
+      }
+
+      .RecommendCheck {
+        display: none;
+      }
     }
 
-    .RecommendCheck {
-      display: none;
-    }
-  }
+    .RecommendBox.checked {
+      background-color: #ff9927;
+      color: #fff;
 
-  .RecommendBox.checked {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 158px;
-    height: 66px;
-    background-color: #ff9927;
-    border-radius: 10px;
-    cursor: pointer;
+      .button {
+        position: absolute;
+        left: 20px;
+        color: #ffffff;
+        font-size: 20px;
+        font-weight: 700;
+      }
 
-    .RecommendText {
-      position: absolute;
-      left: 20px;
-      color: #ffffff;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .RecommendCheck {
-      display: block;
-      position: absolute;
-      left: 122px;
+      .RecommendCheck {
+        display: block;
+        position: absolute;
+        right: 25px;
+      }
     }
   }
 }
