--- a/src/pages/Recommend/Recommend.scss
+++ b/src/pages/Recommend/Recommend.scss
@@ -1,10 +1,5 @@
 .Recommend {
-  box-sizing: border-box;
-  height: 100vh;
-  padding: 22px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  padding: 0 22px;
 
   .RecommendWrap {
     display: grid;
@@ -23,6 +18,7 @@
       background-color: rgba(238, 125, 0, 0.09);
       border-radius: 10px;
       padding: 0 20px;
+      justify-content: space-between;
 
       button {
         color: rgba(34, 34, 34, 0.3);
@@ -40,8 +36,8 @@
       color: #fff;
 
       .button {
-        position: absolute;
-        left: 20px;
+        // position: absolute;
+        // left: 20px;
         color: #ffffff;
         font-size: 20px;
         font-weight: 700;
@@ -49,8 +45,8 @@
 
       .RecommendCheck {
         display: block;
-        position: absolute;
-        right: 25px;
+        // position: absolute;
+        // right: 25px;
       }
     }
   }
