--- a/src/components/NextBt/NextBt.scss
+++ b/src/components/NextBt/NextBt.scss
@@ -1,26 +1,14 @@
 .nextBt {
   position: fixed;
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 66px;
-  padding: 0;
   background-color: #ff9927;
-  bottom: env(safe-area-inset-bottom);
-  top: 746px;
-
-  // bottom 값을 0으로 해서 어떤 높이에서도 하단에 위치하게 하고싶은데 노치대응 속성을 주면 동시에 줄 수 없는걸까?bottom: calc(env(safe-area-inset-bottom) + 0);
-
-  cursor: pointer;
-  .nextBtText {
-    position: absolute;
-    color: #ffffff;
-    font-size: 19px;
-    font-weight: 700;
-    line-height: 22px;
-    letter-spacing: -0.57px;
-    text-align: center;
-    right: 0px;
-    left: 0px;
-  }
+  bottom: 0;
+  color: #ffffff;
+  font-size: 19px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: -0.57px;
+  right: 0px;
+  left: 0px;
 }
