--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap");
 
 html,
 body {
-    max-width: 640px;
-    min-height: 100%;
-    margin: 0 auto;
-    font-family: 'Roboto', 'Noto Sans KR', sans-serif;
+  max-width: 640px;
+  min-width: 320px;
+  min-height: 100%;
+  margin: 0 auto;
+  font-family: "Roboto", "Noto Sans KR", sans-serif;
 }
 
 .screenOut {
