--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -48,7 +48,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 input,
@@ -77,8 +77,6 @@ textarea,
 button {
   font-size: 14px;
   line-height: 1.5;
-  font-family: HelveticaNeue, AppleSDGothicNeo-Regular, tahoma, 'Malgun Gothic',
-    '맑은 고딕', dotum, '돋움', sans-serif;
   color: #333;
 }
 
@@ -115,16 +113,16 @@ select {
   background: #fff;
   border-radius: 5px;
 }
-input[type='tel'],
-input[type='time'],
-input[type='text'],
-input[type='password'],
-input[type='search'],
-input[type='email'],
-input[type='file'],
-input[type='url'],
-input[type='number'],
-input[type='date'],
+input[type="tel"],
+input[type="time"],
+input[type="text"],
+input[type="password"],
+input[type="search"],
+input[type="email"],
+input[type="file"],
+input[type="url"],
+input[type="number"],
+input[type="date"],
 textarea {
   width: 100%;
   height: 30px;
