--- a/src/pages/Splash.scss
+++ b/src/pages/Splash.scss
@@ -1,7 +1,7 @@
 .splash {
   display: flex;
   height: 100vh;
-  padding: 81.07vw 0 63px;
+  padding: 81.07% 0 63px;
   flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box;
