--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -2,8 +2,9 @@
     margin-top: 58px;
 
     .headerTitle {
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         font-size: 45px;
+        line-height: 45px;
     }
 
     .headerLines {
