--- a/src/style/start.scss
+++ b/src/style/start.scss
@@ -1,7 +1,7 @@
 .startContainer {
     box-sizing: border-box;
     height: 100vh;
-    padding: 22px;
+    padding: 0 22px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
