--- a/src/components/NextBt/NextBt.scss
+++ b/src/components/NextBt/NextBt.scss
@@ -3,7 +3,6 @@
   width: 100%;
   height: 66px;
   background-color: #ff9927;
-  bottom: 0;
   color: #ffffff;
   font-size: 19px;
   font-weight: 700;
@@ -11,4 +10,7 @@
   letter-spacing: -0.57px;
   right: 0px;
   left: 0px;
+  bottom: 0;
+  bottom: constant(safe-area-inset-bottom);
+  bottom: env(safe-area-inset-bottom);
 }
